Fixed horizontal scroll after toggling nav problem

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -525,12 +525,18 @@ small {
 
 /*------------ General ------------*/
 
+html {
+	width: 100%;
+	overflow-x: hidden;
+}
+
 body {
 	font-family: $franklin;
 	font-style: normal;
 	font-weight: 500;
 	font-size: 16px;
-	width: 100%;
+	max-width: 100%;
+	overflow-x: hidden;
 	color: $textblack;
 
 	@include breakpoint(t) {
